# MyGrator

./: .gitignore  CMakeLists.txt  Dockerfile  README.md
include/mysqlx/: common_constants.h  xapi.h  xdevapi.h
include/mysqlx/common/: settings.h
include/mysqlx/devapi/: settings.h
include/mysqlx/devapi/detail/: result.h
src/: main.cpp
src/mygrator/: main.cpp
src/website/: index.html  style.css
